data/derived/comb/progs/unify/prog0780.ml.out
Characters 20-21:
  let _ = fixpoint (g,0);;
                      ^
Error: This expression has type int but an expression was expected of type
         string
